[package]
name = "wmjtyd-signer-websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum =  {version = "0.5.15", features = ["headers","ws"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.3"
headers = "0.3"
# futures = "0.3.21"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower-http = { version = "0.3.4", features = ["fs", "trace"] }
#serde and json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
crossbeam-channel = "0.5.6"
once_cell = "1"
async-channel = "1.7.1"
flume = "0.10.14"
[dependencies.wmjtyd-libstock]
git = "https://github.com/wmjtyd/libstock.git"
default-features = false
features = ["crypto", "zeromq", "slack"]
branch = "develop"