[package]
name = "wmjtyd-signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# proc-macro = true

[dependencies]
clap = "~2.27.0"

tokio = { version = "1.18.2", features = ["full"] }
crossbeam-channel = "0.5.6"
notify = "5.0.0-pre.15"
anyhow = { version = "1.0.58", features = ["backtrace"] }
arcstr = { version = "1.1.4", features = ["serde"] }

log = { version = "0.4.17", features = ["std"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"

yata = "0.6.1"


[dependencies.wmjtyd-libstock]
git = "https://github.com/wmjtyd/libstock.git"
default-features = false
features = ["crypto", "zeromq", "slack"]
branch = "develop"

[dependencies.crypto-message]
git = "https://github.com/wmjtyd/crypto-crawler-rs"
rev = "8914b2855b87397f82a14507a20a2094c1ab7891"